(PC-2721) fix text and icon alignment harmonization

--- a/src/styles/components/layout/Insert/_Insert.scss
+++ b/src/styles/components/layout/Insert/_Insert.scss
@@ -35,9 +35,10 @@
     justify-content: start;
 
     p {
-      align-self: center;
+      align-self: normal;
       font-weight: 700;
       padding-left: 0.5rem;
+      padding-top: 0.25rem;
     }
 
     img {
